Projects/PLProject5/Problem2/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> yang
Rule 2     start -> kim
Rule 3     yang -> YANG
Rule 4     kim -> KIM

Terminals, with rules where they appear

KIM                  : 4
YANG                 : 3
error                : 

Nonterminals, with rules where they appear

kim                  : 2
start                : 0
yang                 : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . yang
    (2) start -> . kim
    (3) yang -> . YANG
    (4) kim -> . KIM

    YANG            shift and go to state 4
    KIM             shift and go to state 2

    start                          shift and go to state 1
    yang                           shift and go to state 3
    kim                            shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (4) kim -> KIM .

    $end            reduce using rule 4 (kim -> KIM .)


state 3

    (1) start -> yang .

    $end            reduce using rule 1 (start -> yang .)


state 4

    (3) yang -> YANG .

    $end            reduce using rule 3 (yang -> YANG .)


state 5

    (2) start -> kim .

    $end            reduce using rule 2 (start -> kim .)

